<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layoutDirection="ltr">

    <ScrollView
        android:id="@+id/mscrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingBottom="15dp">

                    <TextView
                        android:id="@+id/lbl_login"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/lbl_login"
                        android:textAllCaps="true"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/large_text_size" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edit_textfield_height"
                        android:layout_marginTop="50dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="15dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/account_icon"
                            android:tint="@color/customGrey" />

                        <EditText
                            android:id="@+id/txt_username"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="8dp"
                            android:background="@android:color/transparent"
                            android:ems="10"
                            android:gravity="center|left"
                            android:hint="@string/txt_username"
                            android:inputType="textEmailAddress"
                            android:letterSpacing="0.05"
                            android:maxLength="245"
                            android:singleLine="true"
                            android:textColor="@color/textcolor_black"
                            android:textColorHint="@color/textcolor_light_gray"
                            android:textSize="@dimen/default_text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edit_textfield_height"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="15dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/password_icon"
                            android:tint="@color/customGrey" />

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent">

                            <EditText
                                android:id="@+id/txt_password"
                                android:layout_width="fill_parent"
                                android:layout_height="@dimen/edit_textfield_height"
                                android:layout_marginLeft="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:gravity="center|left"
                                android:hint="@string/txt_password"
                                android:inputType="textPassword"
                                android:letterSpacing="0.05"
                                android:maxLength="40"
                                android:singleLine="true"
                                android:textColor="@color/textcolor_black"
                                android:textColorHint="@color/textcolor_light_gray"
                                android:textSize="@dimen/default_text_size" />

                            <ImageView
                                android:id="@+id/pwd_hide_show"
                                android:layout_width="20dp"
                                android:layout_height="fill_parent"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="15dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/hidepass_icon" />
                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="05dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center|left">

                        <ImageView
                            android:id="@+id/chk_keep_me_logged_in"
                            android:layout_width="20dp"
                            android:layout_height="40dp"
                            android:src="@drawable/check_without_makr" />

                        <TextView
                            android:id="@+id/lbl_keep_me_logged_in"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/chk_keep_me_logged_in"
                            android:gravity="center"
                            android:paddingLeft="08dp"
                            android:text="@string/lbl_keep_me_logged_in"
                            android:textColor="@color/textcolor_black"
                            android:textSize="@dimen/default_text_size" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginTop="30dp">

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="@dimen/button_width"
                            android:layout_height="fill_parent"
                            android:layout_centerInParent="true"
                            android:background="@drawable/button_click"
                            android:gravity="center"
                            android:letterSpacing="0.1"
                            android:singleLine="true"
                            android:text="@string/lbl_login"
                            android:textAllCaps="false"
                            android:textColor="@color/textcolor_black"
                            android:textSize="@dimen/button_text_size" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btn_reset_password"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/small_button_height"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:singleLine="true"
                        android:text="@string/btn_reset_password"
                        android:textAllCaps="false"
                        android:textColor="@color/button_color_bg"
                        android:textSize="@dimen/default_text_size" />

                    <TextView
                        android:id="@+id/btn_create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/btn_create_account"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="@dimen/default_text_size" />

                </LinearLayout>

                <!--    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="140dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/login_logo" />-->

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="7dp"
        android:scaleType="centerInside"
        android:visibility="gone" />

    <TextView
        android:id="@+id/versionSignIn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="12dp" />

</RelativeLayout>